<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Paul">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="169dp"
        android:layout_height="263dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paul_image" />

    <TextView
        android:id="@+id/txtPaul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="38dp"
        android:text="@string/btn_dog4"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toStartOf="@+id/textView14" />

    <TextView
        android:id="@+id/txtPaulAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="38dp"
        android:text="@string/txt_age"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPaul" />

    <TextView
        android:id="@+id/txtPaulGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_gender"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtPaulAge"
        app:layout_constraintTop_toBottomOf="@+id/txtPaulAge" />

    <TextView
        android:id="@+id/txtPaulBreed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_breed"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtPaulGender"
        app:layout_constraintTop_toBottomOf="@+id/txtPaulGender" />

    <Button
        android:id="@+id/btnPaulAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="17dp"
        android:text="@string/btn_appointment"
        app:layout_constraintEnd_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/txtPaulBreed" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="291dp"
        android:text="8 Weeks"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Male"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Yes"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/txtPaulAppointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>